# DSS-Python

./: .gitignore  .travis.yml  LICENSE  OPENDSS_LICENSE  README  README.html  README.md  appveyor.yml  changelog.html  dss_build.py  dss_setup_common.py  enumerations.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: builds.yml
_sources/: README.md  changelog.md  enumerations.md  index.md
_sources/apidocs/: index.rst
_sources/examples/: GettingStarted.ipynb  JSON.ipynb  Multithreading.ipynb  Plotting.ipynb
_static/: documentation_options.js
apidocs/: index.html
apidocs/dss/: dss.IActiveClass.html  dss.IBus.html  dss.ICNData.html  dss.ICapControls.html  dss.ICapacitors.html  dss.ICircuit.html  dss.ICktElement.html  dss.ICtrlQueue.html  dss.IDSS.html  dss.IDSSElement.html  dss.IDSSEvents.html  (+50 more)
cffi/: dss_capi_cffi.h  dss_capi_custom.c  dss_capi_custom.h  dsspm_capi_cffi.h
ci/: build_appveyor.bat  build_conda.sh  build_klusolve_py27.bat  build_linux.sh  build_linux_conda.sh  build_osx.sh  build_wheel.sh  build_windows.sh  install_miniconda.bat  install_vcforpython27.bat  test_wheel.sh  upload_windows.sh
conda/: README.md  bld.bat  build.sh  conda_build_config.yaml  meta.yaml  meta_wheels.yaml
docs/: Makefile  README.md  changelog.md  conf.py  dss.rst  index.md  index.rst  make.bat  obj.rst
dss/: IActiveClass.py  IBus.py  ICNData.py  ICapControls.py  ICapacitors.py  ICircuit.py  ICktElement.py  ICtrlQueue.py  IDSS.py  IDSSElement.py  IDSSEvents.py  IDSSProgress.py  IDSSProperty.py  IDSS_Executive.py  IDSSimComs.py  IError.py  IFuses.py  IGICSources.py  IGenerators.py  IISources.py  ILineCodes.py  ILineGeometries.py  ILineSpacings.py  ILines.py  ILoadShapes.py  ILoads.py  IMeters.py  IMonitors.py  IObj.py  IPDElements.py  IPVSystems.py  IParallel.py  IParser.py  IReactors.py  IReclosers.py  IReduceCkt.py  IRegControls.py  IRelays.py  ISensors.py  ISettings.py  (+26 more)
examples/: GettingStarted.html  JSON.html  Multithreading.html  Plotting.html
tests/: _settings.py  common.py  compare_outputs.py  save_outputs.py  test_alt.py  test_alt_em.py  test_batch.py  test_case_check.py  test_com_patch.py  test_ctrlqueue.py  test_events.py  test_general.py  test_obj.py  test_opendssdirect_alt.py  test_past_issues.py  test_set_mode.py  test_settings.py  validate.py
(+363 files in other folders)
